[build-system]
requires = ["setuptools<82.0.0", "wheel", "toml"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 120

[tool.pyright]
extraPaths = [
    "/home/litt/IsaacLab/source/isaaclab/",
    "/home/litt/IsaacLab/source/isaaclab_tasks/",
    "/home/litt/IsaacLab/source/isaaclab_assets/",
    "/home/litt/IsaacLab/source/isaaclab_contrib/",
    "/home/litt/IsaacLab/source/isaaclab_mimic/",
    "/home/litt/IsaacLab/source/isaaclab_rl/",
    "/home/litt/Projects/legged-rl-isaaclab/typings/",
]
reportPrivateImportUsage = "none"
reportMissingModuleSource = "none" # -> most common: prettytable in mdp managers
reportGeneralTypeIssues = "none" # -> raises 218 errors (usage of literal MISSING in dataclasses)
reportOptionalMemberAccess = "warning" # -> raises 8 errors
reportPrivateUsage = "warning"
